Updated duckdb to postgres instructions

--- a/scripts/DuckDB-to-Postgres.ipynb
+++ b/scripts/DuckDB-to-Postgres.ipynb
@@ -2,20 +2,22 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "source": [
-                "!pip install psycopg2 # library for postrgres connector\n",
+                "!pip install -q psycopg2 # library for postrgres connector\n",
                 "from sqlalchemy import create_engine\n",
-                "import pandas as pd"
+                "import pandas as pd\n",
+                "import duckdb\n",
+                "duckcon = duckdb.connect()"
             ],
             "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 13,
             "source": [
-                "# connect to engine. This assumes a DB of saddl, and root user without a pw\n",
+                "# connect to engine. This assumes a DB name of saddl, and root user without a pw\n",
                 "engine = create_engine('postgresql://:@localhost:5432/saddl')"
             ],
             "outputs": [],
@@ -23,7 +25,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 38,
+            "execution_count": 44,
             "source": [
                 "with engine.connect() as con:\n",
                 "    with open('../db-export/0-0-1-prerelease/schema.sql', mode='r') as f:\n",
@@ -32,60 +34,142 @@
                 "            if 'CREATE TABLE' in line:\n",
                 "                line = line.strip().replace('BIGINT', 'INT').replace('FLOAT', 'REAL').replace('DOUBLE', 'REAL')\n",
                 "                print(line)\n",
-                "                result = con.execute(line)\n",
-                "                print(result.all())"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "['CREATE TABLE work_predictions(target INT, candidate INT, swsm REAL, swde REAL, wp_dv REAL, partof REAL, contains REAL, \"overlaps\" REAL, author REAL, simdiff REAL, grsim REAL, randdiff REAL, count INTEGER);',\n",
-                            " 'CREATE TABLE clean_predictions(target VARCHAR, candidate VARCHAR, swsm REAL, swde REAL, wp_dv REAL, partof REAL, contains REAL, \"overlaps\" REAL, author REAL, simdiff REAL, grsim REAL, randdiff REAL, relatedness REAL, count INTEGER);',\n",
-                            " 'CREATE TABLE meta(htid VARCHAR, \"access\" VARCHAR, rights VARCHAR, ht_bib_key VARCHAR, description VARCHAR, source VARCHAR, source_bib_num VARCHAR, oclc_num VARCHAR, isbn VARCHAR, issn VARCHAR, lccn VARCHAR, title VARCHAR, imprint VARCHAR, rights_reason_code VARCHAR, rights_timestamp VARCHAR, us_gov_doc_flag INT, rights_date_used REAL, pub_place VARCHAR, lang VARCHAR, bib_fmt VARCHAR, collection_code VARCHAR, content_provider_code VARCHAR, responsible_entity_code VARCHAR, digitization_agent_code VARCHAR, access_profile_code VARCHAR, author VARCHAR, page_count VARCHAR);',\n",
-                            " 'CREATE TABLE manifestation_predictions(target INT, candidate INT, swsm REAL, swde REAL, wp_dv REAL, partof REAL, contains REAL, \"overlaps\" REAL, author REAL, simdiff REAL, grsim REAL, randdiff REAL, count INTEGER);',\n",
-                            " 'CREATE TABLE clusters(htid VARCHAR, work_id INT, man_id INT);',\n",
-                            " 'CREATE TABLE work_stats(work_id INT, label_count INT, gov_count INT, serial_count INT, gov_prop REAL, serial_prop REAL);']"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 38
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 27,
-            "source": [
-                "import os\n",
-                "with engine.connect() as con:\n",
-                "    with open('../db-export/0-0-1-prerelease/load.sql', mode='r') as f:\n",
-                "        copy_cmds = []\n",
-                "        for copy_cmd in f.readlines():\n",
-                "            if 'COPY' not in line:\n",
-                "                continue\n",
-                "            a, b = copy_cmd.split(' FROM \\'')\n",
-                "            _, table_name = a.split()\n",
-                "            parquet_location = b.split(\"' (FORMAT\")[0].strip(\"'\")\n",
-                "            csv_tmp_path = parquet_location.replace('parquet', 'csv.tmp')\n",
-                "            pd.read_parquet(parquet_location).to_csv(csv_tmp_path, index=False, header=True)\n",
-                "            pq_cmd = f\"COPY {table_name} FROM '{csv_tmp_path}' DELIMITER ',' CSV HEADER;\"\n",
-                "            print(pq_cmd)\n",
-                "            con.execute(pq_cmd)\n",
-                "            os.remove(csv_tmp_path)"
+                "                con.execute(line.split('(')[0].replace('CREATE TABLE', 'DROP TABLE IF EXISTS'))\n",
+                "                result = con.execute(line)"
             ],
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "COPY work_stats FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/6_work_stats.csv.tmp' DELIMITER ',' CSV HEADER;\n",
-                        "COPY work_predictions FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/0_work_predictions.csv.tmp' DELIMITER ',' CSV HEADER;\n",
-                        "COPY manifestation_predictions FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/4_manifestation_predictions.csv.tmp' DELIMITER ',' CSV HEADER;\n",
-                        "COPY meta FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/2_meta.csv.tmp' DELIMITER ',' CSV HEADER;\n",
-                        "COPY clean_predictions FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/1_clean_predictions.csv.tmp' DELIMITER ',' CSV HEADER;\n",
-                        "COPY clusters FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/5_clusters.csv.tmp' DELIMITER ',' CSV HEADER;\n"
+                        "CREATE TABLE work_stats(work_id INT, label_count INT, gov_count INT, serial_count INT, gov_prop REAL, serial_prop REAL, include BOOLEAN, best_centroid VARCHAR, best_centroid_pd VARCHAR, best_median VARCHAR, best_median_pd VARCHAR);\n"
+                    ]
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 54,
+            "source": [
+                "duckcon.execute(f\"SELECT * FROM '{csv_tmp_path}' LIMIT 1\").fetch_df()"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "   man_id  label_count  gov_count  serial_count  gov_prop  serial_prop  \\\n",
+                            "0   80406            1          0             1       0.0          1.0   \n",
+                            "\n",
+                            "   include best_centroid best_centroid_pd best_median best_median_pd  \n",
+                            "0    False           NaN              NaN         NaN            NaN  "
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>man_id</th>\n",
+                            "      <th>label_count</th>\n",
+                            "      <th>gov_count</th>\n",
+                            "      <th>serial_count</th>\n",
+                            "      <th>gov_prop</th>\n",
+                            "      <th>serial_prop</th>\n",
+                            "      <th>include</th>\n",
+                            "      <th>best_centroid</th>\n",
+                            "      <th>best_centroid_pd</th>\n",
+                            "      <th>best_median</th>\n",
+                            "      <th>best_median_pd</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>80406</td>\n",
+                            "      <td>1</td>\n",
+                            "      <td>0</td>\n",
+                            "      <td>1</td>\n",
+                            "      <td>0.0</td>\n",
+                            "      <td>1.0</td>\n",
+                            "      <td>False</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 54
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Paths in load.sql should correctly point to the DB export and be absolute."
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 57,
+            "source": [
+                "import os\n",
+                "import time\n",
+                "with engine.connect() as con:\n",
+                "    with open('../db-export/0-0-1-prerelease/load.sql', mode='r') as f:\n",
+                "        copy_cmds = []\n",
+                "        print(\"THIS COPY CMD doesn't run from Python's SQL connector, copy and run it in the command line.\")\n",
+                "        print(\"=\"*40)\n",
+                "        for copy_cmd in f.readlines():\n",
+                "            if 'COPY' not in copy_cmd:\n",
+                "                continue\n",
+                "            a, b = copy_cmd.split(' FROM \\'')\n",
+                "            _, table_name = a.split()\n",
+                "            parquet_location = b.split(\"' (FORMAT\")[0].strip(\"'\")\n",
+                "            csv_tmp_path = parquet_location.replace('parquet', 'csv')\n",
+                "            #pd.read_parquet(parquet_location).to_csv(csv_tmp_path, index=False, header=True)\n",
+                "            # use duckdb instead\n",
+                "            duckcon.execute(f\"COPY '{parquet_location}' TO '{csv_tmp_path}' ( DELIMITER ',' HEADER );\")\n",
+                "            pq_cmd = f\"COPY {table_name} FROM '{csv_tmp_path}' DELIMITER ',' CSV HEADER;\"\n",
+                "            print(pq_cmd)\n",
+                "            #con.execute(pq_cmd)\n",
+                "            #os.remove(csv_tmp_path)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "THIS COPY CMD doesn't run from Python's SQL connector, copy and run it in the command line.\n",
+                        "========================================\n",
+                        "COPY clusters FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/7_clusters.csv' DELIMITER ',' CSV HEADER;\n",
+                        "COPY clean_predictions FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/1_clean_predictions.csv' DELIMITER ',' CSV HEADER;\n",
+                        "COPY work_predictions FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/2_work_predictions.csv' DELIMITER ',' CSV HEADER;\n",
+                        "COPY meta FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/0_meta.csv' DELIMITER ',' CSV HEADER;\n",
+                        "COPY manifestation_predictions FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/6_manifestation_predictions.csv' DELIMITER ',' CSV HEADER;\n",
+                        "COPY manifestation_stats FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/3_manifestation_stats.csv' DELIMITER ',' CSV HEADER;\n",
+                        "COPY work_stats FROM '/Users/organisciak/Documents/projects/saddl-website/db-export/0-0-1-prerelease/4_work_stats.csv' DELIMITER ',' CSV HEADER;\n"
                     ]
                 }
             ],
@@ -106,10 +190,11 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 47,
             "source": [
                 "with engine.connect() as con:\n",
                 "    con.execute('ALTER TABLE work_stats ADD PRIMARY KEY (work_id);')\n",
+                "    con.execute('ALTER TABLE manifestation_stats ADD PRIMARY KEY (man_id);')\n",
                 "    con.execute('ALTER TABLE meta ADD PRIMARY KEY (htid);')\n",
                 "    con.execute('ALTER TABLE clusters ADD PRIMARY KEY (htid);')"
             ],
@@ -165,7 +250,7 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "[(55553, 5, 0, 5, 0.0, 1.0)]"
+                            "[]"
                         ]
                     },
                     "metadata": {},
