Note about privileges

--- a/scripts/DuckDB-to-Postgres.ipynb
+++ b/scripts/DuckDB-to-Postgres.ipynb
@@ -178,6 +178,17 @@
         {
             "cell_type": "markdown",
             "source": [
+                "if you have users with privileges granted to the tables that you just dropped and recreated, you need to run this\n",
+                "```sql\n",
+                "GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public TO saddl;\n",
+                "GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public TO saddl;\n",
+                "```"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "## ADD PRIMARY KEY\n",
                 "\n",
                 "`ALTER TABLE` locks the table, so make sure there's nothing else blocking your query.\n",
