Details on text index creation

--- a/scripts/DuckDB-to-Postgres.ipynb
+++ b/scripts/DuckDB-to-Postgres.ipynb
@@ -244,6 +244,33 @@
         {
             "cell_type": "markdown",
             "source": [
+                "## Create Search vector column and index\n",
+                "\n",
+                "Currently, this is just title and author concatenated. Can be improved with weighting or field-specific search, or text highlighting.\n",
+                "https://www.postgresql.org/docs/9.5/textsearch-tables.html.\n",
+                "\n",
+                "Some notes:\n",
+                "- `coalesce(title, '')` ensures that fields are still concatenated when NULL."
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "with engine.connect() as con:\n",
+                "    con.execute('ALTER TABLE meta ADD COLUMN textsearch tsvector;')\n",
+                "    con.execute('''UPDATE meta SET textsearch =\n",
+                "     to_tsvector('english', coalesce(title,'') || ' ' || coalesce(author,''));\n",
+                "    ''')\n",
+                "    con.execute('CREATE INDEX meta_search_idx ON meta USING GIN (textsearch);')"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "## Test"
             ],
             "metadata": {}
